[gd_scene load_steps=13 format=3 uid="uid://b0n0fx6wosttu"]

[ext_resource type="Script" path="res://Scripts/Helipad.gd" id="1_x7fs5"]
[ext_resource type="Material" uid="uid://yp3rlxwadowu" path="res://Materials/HelipadLightMaterial.tres" id="2_neuln"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_uswjy"]
height = 48.3938
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x3rq2"]
albedo_color = Color(0.33, 0.33, 0.33, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_7h0uf"]
top_radius = 2.0
bottom_radius = 2.1
height = 0.06

[sub_resource type="SphereMesh" id="SphereMesh_pmpcj"]
radius = 0.1
height = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fi0go"]
albedo_color = Color(0.00933319, 0, 0.56, 1)

[sub_resource type="BoxMesh" id="BoxMesh_snr88"]
size = Vector3(0.5, 0.07, 2.3)

[sub_resource type="BoxMesh" id="BoxMesh_qmoip"]
size = Vector3(0.5, 0.07, 1.6)

[sub_resource type="Animation" id="Animation_pyvxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/Light1:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(2, 2, 0, 1)]
}

[sub_resource type="Animation" id="Animation_w14jr"]
resource_name = "landing_sequence"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node3D/Light1:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(2, 2, 0, 1), Color(0.268632, 2.80963e-06, 1.55222e-06, 1), Color(2, 2, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5hfa"]
_data = {
"RESET": SubResource("Animation_pyvxd"),
"landing_sequence": SubResource("Animation_w14jr")
}

[node name="Helipad" type="Node3D" groups=["Helipads"]]
script = ExtResource("1_x7fs5")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 19.9165, 0)
shape = SubResource("CylinderShape3D_uswjy")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
material_override = SubResource("StandardMaterial3D_x3rq2")
mesh = SubResource("CylinderMesh_7h0uf")
skeleton = NodePath("../..")

[node name="Light1" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0399896, -1.81383)
material_override = ExtResource("2_neuln")
mesh = SubResource("SphereMesh_pmpcj")
skeleton = NodePath("../..")

[node name="Light2" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0399896, 1.73011)
material_override = ExtResource("2_neuln")
mesh = SubResource("SphereMesh_pmpcj")
skeleton = NodePath("../..")

[node name="Light3" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73223, 0.0399896, 0)
material_override = ExtResource("2_neuln")
mesh = SubResource("SphereMesh_pmpcj")
skeleton = NodePath("../..")

[node name="Light4" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.77998, 0.0399896, 0)
material_override = ExtResource("2_neuln")
mesh = SubResource("SphereMesh_pmpcj")
skeleton = NodePath("../..")

[node name="H1" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.621794, 0, 0)
material_override = SubResource("StandardMaterial3D_fi0go")
mesh = SubResource("BoxMesh_snr88")
skeleton = NodePath("../..")

[node name="H2" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.626578, 0, 0)
material_override = SubResource("StandardMaterial3D_fi0go")
mesh = SubResource("BoxMesh_snr88")
skeleton = NodePath("../..")

[node name="H3" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(0.000733093, 0, 1, 0, 1, 0, -1, 0, 0.000733093, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_fi0go")
mesh = SubResource("BoxMesh_qmoip")
skeleton = NodePath("../..")

[node name="LandingMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07579, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d5hfa")
}

[node name="LandingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="timeout" from="LandingTimer" to="." method="start_landing"]
